--- a/06.Print Numbers/6Print Numbers.csproj
+++ b/06.Print Numbers/6Print Numbers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{136D676B-3002-4C65-B739-72CE492F5836}</ProjectGuid>
+    <ProjectGuid>{B4E3CC6F-96A7-44F9-AED9-61FB4ABA3926}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PrintYourName</RootNamespace>
-    <AssemblyName>PrintYourName</AssemblyName>
+    <RootNamespace>Print_Numbers</RootNamespace>
+    <AssemblyName>Print Numbers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrintYourName.cs" />
+    <Compile Include="PrintNumbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
