--- a/07.PrintFirstAndLastName/7PrintFirstAndLastName.csproj
+++ b/07.PrintFirstAndLastName/7PrintFirstAndLastName.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{34E30334-36E7-4E4E-A0D5-8886E002B5FB}</ProjectGuid>
+    <ProjectGuid>{0F238914-02D2-419E-BB59-D53CF600AA99}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>a15AgeAfter10Years</RootNamespace>
-    <AssemblyName>a15AgeAfter10Years</AssemblyName>
+    <RootNamespace>PrintFirstAndLastName</RootNamespace>
+    <AssemblyName>PrintFirstAndLastName</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgeAfter10Years.cs" />
+    <Compile Include="PrintFirstAndLastName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
