--- a/08.SquareRoot/8SquareRoot.csproj
+++ b/08.SquareRoot/8SquareRoot.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3597695C-8D7B-47ED-AC5B-3D0D97ED0931}</ProjectGuid>
+    <ProjectGuid>{BB238178-926D-48DD-8455-47F15C7720CE}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>a16PrintLongSequence</RootNamespace>
-    <AssemblyName>a16PrintLongSequence</AssemblyName>
+    <RootNamespace>SquareRoot</RootNamespace>
+    <AssemblyName>SquareRoot</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrintLongSequence.cs" />
+    <Compile Include="SquareRoot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
