--- a/14.CurrentDatAndTime/a14CurrentDatAndTime.csproj
+++ b/14.CurrentDatAndTime/a14CurrentDatAndTime.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B4E3CC6F-96A7-44F9-AED9-61FB4ABA3926}</ProjectGuid>
+    <ProjectGuid>{8AB34444-9794-4FAB-9B18-33133B98D6D1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Print_Numbers</RootNamespace>
-    <AssemblyName>Print Numbers</AssemblyName>
+    <RootNamespace>a14CurrentDatAndTime</RootNamespace>
+    <AssemblyName>a14CurrentDatAndTime</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrintNumbers.cs" />
+    <Compile Include="CurrentDatAndTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
